object-property-editor: allow numeric properties to be inverted

This just inverts the scale widget, so (in LTR) the high value is
on the left.  This is done by adding ':inverted' to the property
name.

https://bugzilla.gnome.org/show_bug.cgi?id=789795